Initial commit of branch gitBranch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-aws.s3.accessKey=AKIAR3VX6YEHI3N44YUV
-aws.s3.accessSecret=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
+aws.s3.accessKey=
+aws.s3.accessSecret=
 aws.s3.region=eu-central-1
 
 jwt.token.secret=cucumber
