--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,1 @@
-aws.s3.accessKey=
-aws.s3.accessSecret=
-aws.s3.region=eu-central-1
-
-jwt.token.secret=cucumber
-jwt.token.expired=3600000
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysqldb/wikistorage
-spring.datasource.username=wiki
-spring.datasource.password=wikipass
-spring.jpa.database=mysql
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.profiles.active=prod
