Changing application props

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,9 +6,9 @@ jwt.token.secret=cucumber
 jwt.token.expired=3600000
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysqldb/wikistorage
-spring.datasource.username=wiki
-spring.datasource.password=wikipass
+spring.datasource.url=jdbc:mysql://localhost:8080/wikistorage
+spring.datasource.username=root
+spring.datasource.password=password
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.servlet.multipart.max-file-size=10MB
